dhall/tests/type-errors/unit/FunctionTypeArgumentTypeNotAType.txt
 --> 1:1
  |
1 | 2 → _␊
  | ^
  |
  = Type error: Invalid function input
